# myframe_demo_projs

./: .gitmodules  CMakeLists.txt  README.md
landlord/: CMakeLists.txt  README.md  config.json  landlord.proto
landlord/landlord_client/: CMakeLists.txt  LandlordClient.cpp  LandlordHallC.cpp  LandlordHallC.h  LandlordRoomC.cpp  LandlordRoomC.h  PlayerC.cpp  PlayerC.h
landlord/landlord_common/: ILandlordHall.cpp  ILandlordHall.h  ILandlordRoom.cpp  ILandlordRoom.h  IPlayer.cpp  IPlayer.h  LandlordUtils.cpp  LandlordUtils.h  PlayPoker.cpp  PlayPoker.h  Poker.cpp  Poker.h
landlord/landlord_server/: CMakeLists.txt  LandlordHall.cpp  LandlordHall.h  LandlordRoom.cpp  LandlordRoom.h  LandlordService.cpp  Player.cpp  Player.h
